# Buckwheat

./: .gitignore  CLIPS_WEBAPP_INSTRUCTIONS.md  DEV_SETUP.md  package.json  tmp_slippi_rs.txt  tmp_windows_record_video.rs
.github/workflows/: release.yml
public/: README.md
public/characters/: .gitkeep
public/stages/: .gitkeep
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  clip_processor.rs  commands.rs  lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  settings.rs  slippi.rs
src-tauri/src/game_detector/: mod.rs  slippi_paths.rs
src-tauri/src/recorder/: macos.rs  mock.rs  mod.rs  windows.rs
src-tauri/src/slippi/: events.rs  mod.rs  parser.rs  types.rs
src/lib/: commands.svelte.ts
src/lib/components/: AppHome.svelte  AppLayout.svelte  AppSettings.svelte
src/lib/components/auth/: AuthModal.svelte  UserProfile.svelte
src/lib/components/clips/: ClipsView.svelte  PublicClipViewer.svelte
src/lib/components/cloud/: CloudUpload.svelte  CloudVideos.svelte  StorageUsageBar.svelte
src/lib/components/recordings/: BatchActions.svelte  CharacterIcon.svelte  RecordingStats.svelte  RecordingsTable.svelte
src/lib/components/replay/: ReplayViewer.svelte  StatsPanel.svelte  Timeline.svelte  TimelineEvent.svelte  VideoPlayer.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/stores/: auth.svelte.ts  clips.svelte.ts  cloud-storage.svelte.ts  navigation.svelte.ts  recording.svelte.ts  recordings.svelte.ts  settings.svelte.ts
src/lib/types/: recording.ts
src/lib/utils/: characters.ts  slippi.ts
supabase/functions/complete-upload/: index.ts
supabase/functions/create-public-clip/: deno.json  index.ts
supabase/functions/generate-clip-upload-url/: index.ts
supabase/functions/generate-download-url/: deno.json  index.ts
supabase/functions/generate-upload-url/: index.ts
supabase/migrations/: add_upload_status.sql
workers/clips-cdn/: README.md  package.json  pnpm-lock.yaml  wrangler.toml
workers/clips-cdn/src/: index.ts
