[package]
name = "peppi"
version = "1.0.0"
description = "Headless recording for SSBM through Slippi/Dolphin plus cloud storage"
authors = ["hatsupatsu"]
edition = "2021"

[lib]
name = "peppi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7.0"
thiserror = "2.0"
chrono = "0.4"
log = "0.4"

# Windows-specific recording (commented for now, will be enabled when implementing)
# This is since we are using the dope `windows-record` rust lib from Ascent <3
# [target.'cfg(windows)'.dependencies]
# windows-record = "0.1"

# MacOS-specific recording using scap crate
[target.'cfg(target_os = "macos")'.dependencies]
scap = { git = "https://github.com/CapSoftware/scap", branch = "main" }

