[package]
name = "peppi"
version = "1.0.0"
description = "Headless recording for SSBM through Slippi/Dolphin plus cloud storage"
authors = ["hatsupatsu"]
edition = "2021"

[lib]
name = "peppi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable real screen recording (requires Xcode on macOS, VS on Windows)
real-recording = ["scap", "windows-record"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7.0"
thiserror = "2.0"
chrono = "0.4"
log = "0.4"

# Windows-specific recording using the dope `windows-record` rust lib from Ascent <3
# Only required when "real-recording" feature is enabled
[target.'cfg(windows)'.dependencies]
windows-record = { git = "https://github.com/judehek/windows-record", branch = "main", optional = true }

# MacOS-specific recording using scap crate
# Only required when "real-recording" feature is enabled
[target.'cfg(target_os = "macos")'.dependencies]
scap = { git = "https://github.com/CapSoftware/scap", branch = "main", optional = true }

