[package]
name = "peppi"
version = "1.0.0"
description = "Headless recording for SSBM through Slippi/Dolphin plus cloud storage"
authors = ["hatsupatsu"]
edition = "2021"

[lib]
name = "peppi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable real screen recording (requires Xcode on macOS, VS on Windows)
real-recording = [
    "screencapturekit",
    "windows-capture",
    "wasapi",
    "objc",
    "core-foundation",
    "core-media-rs",
    "core-video-rs",
    "core-graphics",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7.0"
thiserror = "2.0"
chrono = "0.4"
log = "0.4"
sysinfo = "0.31"
base64 = "0.22"
png = "0.17"
peppi = "2.1"
ssbm-data = "0.1"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-capture = { version = "2.0.0-alpha.7", optional = true }
wasapi = { version = "0.21", optional = true }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi"
] }

# MacOS-specific recording using screencapturekit-rs crate
# Only required when "real-recording" feature is enabled
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { git = "https://github.com/doom-fish/screencapturekit-rs", optional = true }
objc = { version = "0.2", optional = true }
core-foundation = { version = "0.10", optional = true }
core-media-rs = { version = "0.3", optional = true }
core-video-rs = { version = "0.3", optional = true }
core-graphics = { version = "0.25", optional = true }
